welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: Missing closing brace `}' assumed here
}
^ZigZag:10: error: expected class or object definition
def posFinale():Boolean ={
^ZigZag:16: error: expected class or object definition
def posSuivante(){
^ZigZag:30: error: Missing closing brace `}' assumed here
  		if(getY()%2 == 0){setX(getX()+1)}
                ^